@@ -1,3 +1,4 @@
+* IMPROVEMENT: KSI_FTLV_memRead will parse and return more information when there's an error during parsing.
 * IMPROVEMENT: Simplified integration test configuration (see integrationtest.conf.sample)
 * BUGFIX: Fixed KSIEP over TCP failing.
 * BUGFIX: Fixed clang static analyze findings.
